Fix alignment if no class is provided

--- a/django_bootstrap_icons/static/bootstrap_icons/css/bootstrap_icons.css
+++ b/django_bootstrap_icons/static/bootstrap_icons/css/bootstrap_icons.css
@@ -1,11 +1,9 @@
 /* set alignment to default */
-svg {
+svg.bi, svg.mdi {
     vertical-align: -.125rem;
 }
-
-/* set alignment in buttons to middle */
-.btn svg {
-    vertical-align: middle;
+svg.mdi {
+    transform:translateY(10%);
 }
 
 .bi-valign-default {
